--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-icons": "^3.10.0",
     "react-jinke-music-player": "^4.16.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-slick": "^0.27.1",
     "styled-components": "^5.1.1"
   },
